--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-chrono = "0.4.38"
 quote = "1.0.36"
 syn = "2.0.60"
+
+[dev-dependencies]
+chrono = "0.4.38"
