fix(metadata): add https prefix to links
Signed-off-by: Caio Gomes <caiocodes@proton.me>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ name = "timeless-partialeq"
 version = "0.1.0"
 edition = "2021"
 license = "AGPL-3.0-or-later"
-homepage = "github.com/caioluis/timeless-partialeq"
-repository = "github.com/caioluis/timeless-partialeq"
+homepage = "https://github.com/caioluis/timeless-partialeq"
+repository = "https://github.com/caioluis/timeless-partialeq"
 description = "PartialEq, but ignores timestamps, ideal for API testing"
 readme = "README.md"
 keywords = ["partialeq", "testing"]
