--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Caio Gomes <caiocodes@proton.me>"]
 name = "timeless-partialeq"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 license = "AGPL-3.0-or-later"
 homepage = "https://github.com/caioluis/timeless-partialeq"
@@ -16,7 +16,7 @@ proc-macro = true
 
 [dependencies]
 quote = "1.0.36"
-syn = "2.0.60"
+syn = { version = "2.0.60", features = ["parsing", "derive"] }
 
 [dev-dependencies]
 chrono = "0.4.38"
